 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES
PIG-1891 Enable StoreFunc to make intelligent decision based on job success or failure (initialcontext via gates)

IMPROVEMENTS

PIG-2852: Update documentation regarding parallel local mode execution (cheolsoo via jcoveney)

PIG-2879: Pig current releases lack a UDF startsWith.This UDF tests if a given string starts with the specified prefix. (initialcontext via azaroth)

PIG-2712: Pig does not call OutputCommitter.abortJob() on the underlying OutputFormat (rohini via gates)

PIG-2918: Avoid Spillable bag overhead where possible (dvryaboy)

PIG-2900: Streaming should provide conf settings in the environment (dvryaboy)

PIG-2353: RANK function like in SQL (xalan via azaroth)

PIG-2915: Builtin TOP udf is sensitive to null input bags (hazen via dvryaboy)

PIG-2901: Errors and lacks in document "Pig Latin Basics" (miyakawataku via billgraham)

PIG-2905: Improve documentation around REPLACE (cheolsoo via billgraham)

PIG-2882: Use Deque instead of Stack (mkhadikov via dvryaboy)

PIG-2781: LOSort isEqual method (xalan via dvryaboy)

PIG-2835: Optimizing the convertion from bytes to Integer/Long (jay23jack via dvryaboy)

PIG-2886: Add Scan TimeRange to HBaseStorage (ted.m via dvryaboy)

PIG-2895: jodatime jar missing in pig-withouthadoop.jar  (thejas)

PIG-2888: Improve performance of POPartialAgg (dvryaboy)

PIG-2708: split MiniCluster based tests out of org.apache.pig.test.TestInputOutputFileValidator (analog.sony via daijy)

PIG-2890: Revert PIG-2578 (dvryaboy)

PIG-2850: Pig should support loading macro files as resources stored in JAR files (matterhayes via dvryaboy)

PIG-1314: Add DateTime Support to Pig (zjshen via thejas)

PIG-2785: NoClassDefFoundError after upgrading to pig 0.10.0 from 0.9.0 (matterhayes via sms)
